<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小雁核身</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_name">请输入账号</string>
    <string name="login_pass">请输入密码</string>
    <string name="btn_text">登录</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="menu_task">任务</string>
    <string name="menu_task_mess_manager">资料管理</string>
    <string name="menu_mine">我的</string>
    <string name="menu_mine_beizhu">我的备注</string>
    <string name="menu_mine_touxiang">个人头像</string>
    <string name="menu_point">执行</string>
    <string name="title">移动运营</string>
    <string name="mine">我的信息</string>
    <string name="volume">批量执行</string>
    <string name="alter_pass">修改密码</string>
    <string name="search_button">当天订单</string>
    <string name="search_date_button">日期搜索</string>
    <string name="yuyue">预约</string>
    <string name="yuyue_text">已分配至核身人员</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_name">姓名:</string>
    <string name="personal_sex">性别:</string>
    <string name="personal_phone">电话:</string>
    <string name="personal_card">身份证:</string>
    <string name="personal_num">完成单数:</string>
    <string name="perform">完成</string>
    <string name="perform_num">完成单数</string>
    <string name="num">订单号:</string>
    <string name="remember_state">记住账号</string>
    <string name="commit_offline">点击提交离线任务</string>
    <string name="explain">请补充说明..</string>
    <string name="task_pro">任务进度</string>
    <string name="text_offline">哇喔，暂无数据！</string>
    <string name="text_volume_null">暂无可执行的任务!</string>
    <string name="volume_radio_btn">全选</string>
    <string name="client_name">客户姓名:</string>
    <string name="client_idcard">客户ID:</string>
    <string name="b_tybe">业务类型:</string>
    <string name="time">上门时间:</string>
    <string name="address">客户地址:</string>
    <string name="title_activity_task_message">TaskMessageActivity</string>
    <string name="task_message">任务详情</string>
    <string name="client_phone">客户电话:</string>
    <string name="client_address">客户地址:</string>
    <string name="bank">银行名称:</string>
    <string name="remark">备注:</string>
    <string name="hint_mess">派单员提示信息:</string>
    <string name="arrtime">预计到达时间:</string>
    <string name="cour_phone">派单员联系方式:</string>
    <string name="open_phone">拨打电话</string>
    <string name="start">出发</string>
    <string name="cancle">返回</string>
    <string name="cancle_ordercode">取消订单</string>
    <string name="arrive">到达</string>
    <string name="open_navi">打开导航</string>
    <string name="exit_login">退出登录</string>
    <string name="save">保存</string>
    <string name="old_pass">旧密码</string>
    <string name="new_pass">新密码</string>
    <string name="pass_again">再次输入新密码</string>
    <string name="length">8</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_null">暂无数据，点击刷新</string>
    <string name="more">更多</string>
    <string name="number">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ</string>
    <string name="title_activity_alter_pass">AlterPassActivity</string>
    <string name="title_activity_volume_execute">VolumeExecuteActivity</string>
    <string name="title_activity_perform">PerformActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="text_search_hint">单号、姓名、地址</string>

    <string-array name="items">
        <item>客户另约时间</item>
        <item>客户不需要此业务办理</item>
        <item>客户出门，暂时不办理</item>
        <item>客户威胁，态度恶劣</item>
    </string-array>

    <string name="title_activity_index">IndexActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mine_mark">MineMarkActivity</string>
    <string name="title_activity_image">ImageActivity</string>

</resources>