<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_tu_da"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:clickable="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView_login2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo" />

        <EditText
            android:id="@+id/editText_userName"
            android:layout_width="330dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_denglu"
            android:drawablePadding="10dp"
            android:hint="@string/login_name"
            android:maxLength="11"
            android:paddingLeft="18dp"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColorHint="#b8b8b8"
            android:textSize="28px" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="330dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:drawableLeft="@drawable/ic_denglu_2"
            android:drawablePadding="10dp"
            android:hint="@string/login_pass"
            android:inputType="textPassword"
            android:maxLength="8"
            android:paddingLeft="18dp"
            android:singleLine="true"
            android:textColorHint="#b8b8b8"
            android:textSize="28px" />

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_height="54dp" >

            <CheckBox
                android:id="@+id/checkBox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:text="@string/remember_state" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/btn_denglu"
            android:gravity="center"
            android:text="@string/btn_text"
            android:textColor="#ffffff"
            android:textSize="30px" />
    </LinearLayout>

</ScrollView>