<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >

    <FrameLayout
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom_message"
        android:background="#f1f1f1" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_message"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg_menu_layout"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/ll_btn_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >


                <ImageView
                    android:id="@+id/iv_order_message"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/bg_menu_task" />

                <TextView
                    android:id="@+id/tv_order_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_order_message"
                    android:text="@string/menu_task"
                    android:textColor="@drawable/ic_tab_text_color"
                    android:textSize="14sp" />

                <FrameLayout
                    android:id="@+id/frameLayout_qipao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-5dp"
                    android:visibility="gone"
                    android:layout_toRightOf="@+id/iv_order_message" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_qipao" />

                    <TextView
                        android:id="@+id/textView_list_size"
                        android:layout_width="14dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="#ffffff"
                        android:textSize="10sp" />
                </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_btn_message_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_order_message_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_menu_mine" />

            <TextView
                android:id="@+id/tv_order_message_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_mine"
                android:textColor="@drawable/ic_tab_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_point"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:src="@drawable/bg_feiji" />

    <TextView
        android:id="@+id/textview_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/menu_point"
        android:textColor="#333333"
        android:textSize="14sp" />

</RelativeLayout>